rns-lang/tests/snapshots/error-lexer-directives-dot_eof_werror.snap
---
source: jasm/tests/jasm_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
.
----- STDERR -----
[E001] Error: unexpected end of file
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_eof.ja:2:1 ]
   │
 2 │ .
   │ ┬  
   │ ╰── unexpected end of file
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
