rns-lang/tests/snapshots/error-lexer-directives-dot_integer_werror.snap
---
source: jasm/tests/jasm_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
.42 42 42 42 42


42 42 42 42 42
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_integer.ja:2:1 ]
   │
 2 │ .42 42 42 42 42
   │ ─┬─  
   │  ╰─── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
