rns-lang/tests/snapshots/error-lexer-directives-dot_method_descriptor.snap
---
source: jasm/tests/jasm_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method (I)V .([Z)Ljava/lang/String;
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_method_descriptor.ja:1:14 ]
   │
 1 │ .method (I)V .([Z)Ljava/lang/String;
   │              ───────────┬───────────  
   │                         ╰───────────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
